--- a/index.html
+++ b/index.html
@@ -12,5 +12,25 @@
     <button id="connect">Connect Wallet</button>
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
     <script src="app.js"></script>
+    <div>
+        <h2>Staking</h2>
+        <input type="number" id="stakeAmount" placeholder="Amount to stake" />
+        <button id="stakeButton">Stake Tokens</button>
+    </div>
+    <div>
+        <h2>Add Liquidity</h2>
+        <input type="number" id="liquidityAmount" placeholder="Amount to add" />
+        <button id="addLiquidityButton">Add Liquidity</button>
+    </div>
+    <div>
+        <h2>Swap Tokens</h2>
+        <input type="number" id="swapAmount" placeholder="Amount to swap" />
+        <button id="swapButton">Swap Tokens</button>
+    </div>
+    <div>
+        <h2>Withdraw Liquidity</h2>
+        <input type="number" id="withdrawAmount" placeholder="Amount to withdraw" />
+        <button id="withdrawButton">Withdraw Liquidity</button>
+    </div>
 </body>
 </html>
