--- a/index.html
+++ b/index.html
@@ -9,29 +9,44 @@
 </head>
 <body>
     <h1>Lezo Token Interface</h1>
-    <button id="connect">Connect Wallet</button>
-    <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
-    <script src="app.js"></script>
+    
+    <!-- Connect Wallet Section -->
+    <div id="walletStatus">
+        <button id="connect">Connect Wallet</button>
+    </div>
+
+    <!-- Staking Section -->
     <div>
         <h2>Staking</h2>
+        <p>Staked Tokens: <span id="stakedTokens">0</span></p>
         <input type="number" id="stakeAmount" placeholder="Amount to stake" />
         <button id="stakeButton">Stake Tokens</button>
     </div>
+
+    <!-- Add Liquidity Section -->
     <div>
         <h2>Add Liquidity</h2>
+        <p>Liquidity Available: <span id="liquidityAmountAvailable">0</span></p>
         <input type="number" id="liquidityAmount" placeholder="Amount to add" />
         <button id="addLiquidityButton">Add Liquidity</button>
     </div>
+
+    <!-- Withdraw Liquidity Section -->
     <div>
         <h2>Withdraw Liquidity</h2>
         <input type="number" id="withdrawAmount" placeholder="Amount to withdraw" />
         <button id="withdrawButton">Withdraw Liquidity</button>
     </div>
+
+    <!-- Swap Tokens Section -->
     <div>
         <h2>Swap Tokens</h2>
         <input type="number" id="swapAmount" placeholder="Amount to swap" />
         <button id="swapButton">Swap Tokens</button>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
+    <script src="app.js"></script>
     
 </body>
 </html>
