--- a/index.html
+++ b/index.html
@@ -1,78 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.0/dist/web3.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lezo Token Interface</title>
+    <title>Lezo Token</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.0/dist/web3.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(45deg, #ff7eb9, #ff65a3, #7afcff, #feff9c, #fff740, #ffa56b, #d4a5a5, #c7b8e6, #f49cbb, #a4a4e0, #eac5d8, #b2f7ef, #eff7f8);
-            background-size: 600% 600%;
-            animation: gradientBackground 30s ease infinite;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        @keyframes gradientBackground {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        .container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .category {
-            background: linear-gradient(135deg, #ff7eb9, #ff65a3, #7afcff, #feff9c, #fff740);
-            background-size: 200% 200%;
-            animation: categoryBackground 5s ease infinite;
-            border: 2px solid black;
-            border-radius: 15px;
-            padding: 20px;
-            transition: background 0.5s ease;
-        }
-
-        @keyframes categoryBackground {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        button {
-            padding: 10px 20px;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
-    <h1>Lezo Token Interface</h1>
-    
-    <!-- Connect Wallet Section -->
-    <div id="walletStatus">
-        <button id="connect">Connect Wallet</button>
-    </div>
-
-    <!-- Main Container for Options -->
     <div class="container">
         <!-- Staking Section -->
-        <div class="category">
+        <div class="card staking">
             <h2>Staking</h2>
             <p>Staked Tokens: <span id="stakedTokens">0</span></p>
             <input type="number" id="stakeAmount" placeholder="Amount to stake" />
@@ -80,7 +18,7 @@
         </div>
 
         <!-- Add Liquidity Section -->
-        <div class="category">
+        <div class="card add-liquidity">
             <h2>Add Liquidity</h2>
             <p>Liquidity Available: <span id="liquidityAmountAvailable">0</span></p>
             <input type="number" id="liquidityAmount" placeholder="Amount to add" />
@@ -88,20 +26,21 @@
         </div>
 
         <!-- Withdraw Liquidity Section -->
-        <div class="category">
+        <div class="card withdraw-liquidity">
             <h2>Withdraw Liquidity</h2>
             <input type="number" id="withdrawAmount" placeholder="Amount to withdraw" />
             <button id="withdrawButton">Withdraw Liquidity</button>
         </div>
 
         <!-- Swap Tokens Section -->
-        <div class="category">
+        <div class="card swap">
             <h2>Swap Tokens</h2>
             <input type="number" id="swapAmount" placeholder="Amount to swap" />
             <button id="swapButton">Swap Tokens</button>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
