--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.0/dist/web3.min.js"></script>
     <meta charset="UTF-8">
@@ -7,10 +8,18 @@
     <title>Lezo Token</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="container">
+    <h1 id="title">Lezo Token</h1>
+
+    <!-- Connect Wallet Section -->
+    <div id="walletStatus">
+        <button id="connect">Connect Wallet</button>
+    </div>
+
+    <div id="container">
         <!-- Staking Section -->
-        <div class="card staking">
+        <div class="category-box" id="staking-box">
             <h2>Staking</h2>
             <p>Staked Tokens: <span id="stakedTokens">0</span></p>
             <input type="number" id="stakeAmount" placeholder="Amount to stake" />
@@ -18,7 +27,7 @@
         </div>
 
         <!-- Add Liquidity Section -->
-        <div class="card add-liquidity">
+        <div class="category-box" id="liquidity-box">
             <h2>Add Liquidity</h2>
             <p>Liquidity Available: <span id="liquidityAmountAvailable">0</span></p>
             <input type="number" id="liquidityAmount" placeholder="Amount to add" />
@@ -26,14 +35,14 @@
         </div>
 
         <!-- Withdraw Liquidity Section -->
-        <div class="card withdraw-liquidity">
+        <div class="category-box" id="withdraw-box">
             <h2>Withdraw Liquidity</h2>
             <input type="number" id="withdrawAmount" placeholder="Amount to withdraw" />
             <button id="withdrawButton">Withdraw Liquidity</button>
         </div>
 
         <!-- Swap Tokens Section -->
-        <div class="card swap">
+        <div class="category-box" id="swap-box">
             <h2>Swap Tokens</h2>
             <input type="number" id="swapAmount" placeholder="Amount to swap" />
             <button id="swapButton">Swap Tokens</button>
@@ -42,5 +51,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
     <script src="app.js"></script>
+
 </body>
+
 </html>
